@startuml
!pragma layout smetana

title Discodeit 클래스 다이어그램
left to right direction

hide empty members

skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundCorner 6
skinparam nodesep 35
skinparam ranksep 45
skinparam ArrowColor #52606D
skinparam ArrowFontColor #334E68
skinparam ArrowFontSize 10
skinparam ClassBorderColor #52606D
skinparam ClassBackgroundColor #FFF8E7
skinparam ClassFontColor #1F2933
skinparam ClassFontSize 12
skinparam ClassStereotypeFontColor #52606D
skinparam ClassStereotypeFontSize 10
skinparam PackageBorderColor #9AA5B1
skinparam PackageBackgroundColor #F8FAFC

package "application" {
    class JavaApplication
}

package "factory" {
    interface ServiceFactory
    abstract class AbstractServiceFactory
    class JCFServiceFactory
    class FileServiceFactory
}

package "service" {
    interface UserService
    interface ChannelService
    interface MessageService
}

package "service.basic" {
    class BasicUserService
    class BasicChannelService
    class BasicMessageService
}

package "repository" {
    abstract class AbstractCrudRepository<T> <<Template Method>>
    class UserRepository
    class ChannelRepository
    class MessageRepository
}

package "repository.objectStore" {
    interface ObjectStore<T> <<Strategy Port>>
    class JCFObjectStore<T>
    class FileObjectStore<T>
}

package "exception" {
    class EntityNotFoundException
    class DuplicateEntityException
    class StorageOperationException
    class NoSuchElementException <<JDK>>
    class RuntimeException <<JDK>>
}

package "entity" {
    class Message
    class Channel
    class User
    enum ChannelType
    interface Serializable <<JDK>>
    interface Identifiable
}

JavaApplication ..> UserService
JavaApplication ..> ChannelService
JavaApplication ..> MessageService
JavaApplication ..> ServiceFactory

ServiceFactory --> UserService
ServiceFactory --> ChannelService
ServiceFactory --> MessageService
ServiceFactory <|.. AbstractServiceFactory
AbstractServiceFactory <|-- JCFServiceFactory
AbstractServiceFactory <|-- FileServiceFactory

UserService <|.. BasicUserService
ChannelService <|.. BasicChannelService
MessageService <|.. BasicMessageService

BasicUserService --> UserRepository
BasicChannelService --> ChannelRepository
BasicMessageService --> MessageRepository
BasicMessageService --> UserRepository
BasicMessageService --> ChannelRepository
BasicMessageService ..> EntityNotFoundException : missing relation

AbstractCrudRepository <|-- UserRepository : User
AbstractCrudRepository <|-- ChannelRepository : Channel
AbstractCrudRepository <|-- MessageRepository : Message
AbstractCrudRepository --> ObjectStore : loads entities
AbstractCrudRepository ..> EntityNotFoundException : absent
AbstractCrudRepository ..> DuplicateEntityException : duplicate
AbstractCrudRepository ..> StorageOperationException : storage failure

ObjectStore <|.. JCFObjectStore
ObjectStore <|.. FileObjectStore

JCFServiceFactory ..> JCFObjectStore : selects
FileServiceFactory ..> FileObjectStore : selects
AbstractServiceFactory ..> ObjectStore : receives
AbstractServiceFactory --> UserRepository : owns
AbstractServiceFactory --> ChannelRepository : owns
AbstractServiceFactory --> MessageRepository : owns

ObjectStore ..> Identifiable : T extends
JCFObjectStore ..> Identifiable : T extends
FileObjectStore ..> Identifiable : T extends
FileObjectStore ..> Serializable : T extends

NoSuchElementException <|-- EntityNotFoundException
RuntimeException <|-- DuplicateEntityException
RuntimeException <|-- StorageOperationException

Identifiable <|.. User
Identifiable <|.. Channel
Identifiable <|.. Message
Serializable <|.. User
Serializable <|.. Channel
Serializable <|.. Message

' 범위: Repository가 CRUD 실패를 의미별 예외로 변환하고 ObjectStore는 checked 기술 예외를 throws로 전달한다.
' 관계선: 실제 인터페이스 호출, 주입, 구현, 제네릭 계약만 표시한다.

@enduml
